@@ -1,3 +1,11 @@
+2004-04-22  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* plait.scm: Added double-click support from Dean Copsey. Bug
+	#140682.
+
+	* agnes.scm (strip): Fix the hint function. Thanks to Leonardo
+	Boshell, as reported in bug #140781.
+
 2004-04-20  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* card.c (set_card_size): Adjustments to follow the revised
